--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -3,15 +3,76 @@
   <head>
     <meta charset="utf-8">
     <!-- not necessary - use it if you want it -->
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script> -->
+    <!-- http://pixel.nymag.com/imgs/daily/vulture/2015/07/22/magazine/22-dr-seuss-colors.nocrop.w529.h777.jpg -->
 
+    <link href="javascript-challenge.css" rel="stylesheet" title="Default Style">
     <script src="javascript-challenge.js"></script>
   </head>
 
   <body>
-    <div vs-type="bar">HI</div>
-    <div vs-type="baz">HI</div>
-    <div vs-type="qux">HI</div>
+    <section class="example">
+      <h2>Self-extending Form</h2>
+      <form vs-type="extendingForm">
+        <label>Do you like green eggs and ham?
+          <select vs-role="toggle">
+            <option value=""selected>Select One</option>
+            <option value="yes">I do not like them, Sam-I-Am.</option>
+            <option value="no">Say! I like green eggs and ham!</option>
+            <option value="idk">I am unsure.</option>
+          </select>
+        </label>
+        <div vs-role="extension" vs-trigger="yes">
+          <div>Try them, try them, and you may! Try them and you may I say!</div>
+          <label><input type="checkbox" name="try">I decline the invitation to try said eggs and ham.</label>
+        </div>
+        <div vs-role="extension" vs-trigger="no">
+          <label>Check all that apply:</label>
+          <label><input type="radio" name="where" value="boat"/>I would eat them in a boat.</label>
+          <label><input type="radio" name="where" value="goat"/>I would eat them with a goat.</label>
+          <label><input type="radio" name="where" value="herethere"/>I would eat them here or there.</label>
+          <label><input type="radio" name="where" value="anywhere"/>I would eat them anywhere.</label>
+        </div>
+        <div vs-role="extension" vs-trigger="idk">
+          <label>Have you previously had the opportunity to try green eggs and ham? Please explain.  </label>
+          <textarea placeholder="Please provide details on any previous experience with green eggs and ham"></textarea>
+        </div>
+      </form>
+    </section>
+
+    <section class="example">
+      <h2>Tabs</h2>
+      <div vs-type="tabs">
+        <ul class="tabs">
+          <li vs-role="tab" vs-id="1" class="active">One Fish</li>
+          <li vs-role="tab" vs-id="2">Two Fish</li>
+          <li vs-role="tab" vs-id="3">Red Fish</li>
+          <li vs-role="tab" vs-id="4">Blue Fish</li>
+        </ul>
+        <div vs-role="content" vs-tab-id="1" class="active"><img src="one-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="2"><img src="two-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="3"><img src="red-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="4"><img src="blue-fish.jpg"></div>
+      </div>
+    </section>
+
+    <section class="example">
+      <h2>Example 3</h2>
+      <div vs-type="drawers">
+        <div vs-role="handle" vs-id="1">The Lorax</div>
+        <div vs-role="drawer" vs-handle-id="1">Unless someone like you cares a whole awful lot, nothing is going to get better. It's not!</div>
+        <div vs-role="handle" vs-id="2">The Cat in the Hat</div>
+        <div vs-role="drawer" vs-handle-id="1">There is no one alive who is youer than you.</div>
+        <div vs-role="handle" vs-id="3">The Grinch</div>
+        <div vs-role="drawer" vs-handle-id="1">There's a light on this tree that won't light on one side.</div>
+      </div>
+    </section>
+
+    <section class="example">
+      <h2>Super Checkbox</h2>
+      <div vs-type="accordion">HI</div>
+    </section>
+
   </body>
 
 </html>
