add drawer example; do absolute min styling

--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -49,28 +49,28 @@
           <li vs-role="tab" vs-id="3">Red Fish</li>
           <li vs-role="tab" vs-id="4">Blue Fish</li>
         </ul>
-        <div vs-role="content" vs-tab-id="1" class="active"><img src="one-fish.jpg"></div>
-        <div vs-role="content" vs-tab-id="2"><img src="two-fish.jpg"></div>
-        <div vs-role="content" vs-tab-id="3"><img src="red-fish.jpg"></div>
-        <div vs-role="content" vs-tab-id="4"><img src="blue-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="1" class="active"><img src="images/one-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="2"><img src="images/two-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="3"><img src="images/red-fish.jpg"></div>
+        <div vs-role="content" vs-tab-id="4"><img src="images/blue-fish.jpg"></div>
       </div>
     </section>
 
     <section class="example">
-      <h2>Example 3</h2>
+      <h2>Drawers</h2>
       <div vs-type="drawers">
         <div vs-role="handle" vs-id="1">The Lorax</div>
         <div vs-role="drawer" vs-handle-id="1">Unless someone like you cares a whole awful lot, nothing is going to get better. It's not!</div>
         <div vs-role="handle" vs-id="2">The Cat in the Hat</div>
-        <div vs-role="drawer" vs-handle-id="1">There is no one alive who is youer than you.</div>
+        <div vs-role="drawer" vs-handle-id="2">There is no one alive who is youer than you.</div>
         <div vs-role="handle" vs-id="3">The Grinch</div>
-        <div vs-role="drawer" vs-handle-id="1">There's a light on this tree that won't light on one side.</div>
+        <div vs-role="drawer" vs-handle-id="3">There's a light on this tree that won't light on one side.</div>
       </div>
     </section>
 
     <section class="example">
-      <h2>Super Checkbox</h2>
-      <div vs-type="accordion">HI</div>
+      <h2>Linked Checkboxes</h2>
+      TODO
     </section>
 
   </body>
